# timeflux_neurofeedback_inverse_gamepad

./: .gitignore  README.rst  app_neurofeedback_coherence_meditation_report.py  entrypoint_linux.sh  entrypoint_win64.sh  make_exe.sh  make_exe_linux.sh  make_wheel.sh  make_wheel_linux.sh  neurofeedback_coherence_meditation_report_colab.ipynb  pyinstaller_linux.sh  python_setup_py_bdist_wheel.sh  requirements.txt  requirements_linux.txt  requirements_macos.txt  requirements_macos_not_fixed.txt  requirements_windows.txt  setup.cfg  setup_linux.cfg  setup_windows.cfg  text-generation_neurofeedback_colab.ipynb  timeflux_coherence_circle.py  timeflux_coherence_circle.spec  timeflux_coherence_circle_win.spec  timeflux_neurofeedback_inverse_gamepad.py  timeflux_neurofeedback_inverse_gamepad.spec  timeflux_neurofeedback_inverse_gamepad_onefile.spec  timeflux_neurofeedback_inverse_gamepad_pyinstaller.spec  timeflux_neurofeedback_inverse_gamepad_pyinstaller_onefile.spec  timeflux_neurofeedback_inverse_gamepad_win.spec
.github/: FUNDING.yml
.github/workflows/: build.yml  publish.yml  pyinstaller_build.yml  pyinstaller_build_windows.yml  test.yml
examples/: dynamic.yaml  dynamic_prefixed.yaml  neurofeedback_bdf.yaml  neurofeedback_bdf_lsl.yaml  neurofeedback_coherence_gradio.yaml  neurofeedback_coherence_meditation_report.yaml  neurofeedback_coherence_miditation_report.yaml  neurofeedback_coherence_musicgen.yaml  neurofeedback_coherence_musicgen_text_generation.yaml  neurofeedback_coherence_stable_diffusion.yaml  neurofeedback_coherence_text_generation.yaml  neurofeedback_iapf.yaml  neurofeedback_iapf_lsl.yaml  neurofeedback_inverse.yaml  neurofeedback_inverse_coherence.yaml  neurofeedback_inverse_gamepad.yaml  neurofeedback_spectrum.yaml  neurofeedback_stable_diffusion.yaml  neurofeedback_stylegan3.yaml  sine.yaml  sinus.yaml  timeflux_coherence_circle.yaml  timeflux_coherence_circle_brainflow_freeeeg32-beta_com5.yaml  timeflux_coherence_circle_eeg_PAC_IMtest_bdf.yaml  timeflux_coherence_force_atlas.gephi
test/: test_arithmetic.py  test_baseline.py
timeflux_example/nodes/: arithmetic.py  dynamic.py  signal.py  sinus.py
timeflux_neurofeedback_inverse_gamepad/nodes/: accumulate_window.py  baseline.py  bdf.py  coherence.py  gamepad.py  gephistreamer.py  gradiostreamer.py  (+8 more)
